2006-11-20    <hesa@gnu.org>

	* doc/xnee_general.texi
	Note on stoping with Control-c added

	* src/xnee_utils.c
	* src/xnee_replay.c
	Parser error fixed

	* libxnee/src/print.c (xnee_store_mouse_pos): 
	Fixed fprintf arguments in wrong order 

        *libxnee/include/libxnee/datastrings.h
        *libxnee/include/libxnee/xnee.h
        *libxnee/include/libxnee/xnee_range.h
        *libxnee/include/libxnee/xnee_record.h
        *libxnee/include/libxnee/xnee_resource.h
        *libxnee/src/datastrings.c
        *libxnee/src/xnee.c
        *libxnee/src/xnee_range.c
        *libxnee/src/xnee_resource.c
	Added define NEED_REPLIES NEED_EVENTS before inclusion of Xproto.h

2006-11-19   Henrik Sandkklef  <hesa@gnu.org>

	* src/xnee_setget.c
	* src/xnee.c
	* include/libxnee/xnee_setget.h
	* include/libxnee/xnee.h
	* include/libxnee/xnee_internal.h
	Added code for syntax check

	* src/xnee_utils.c
	* src/xnee_resource.c
	* src/xnee_replay.c
	* src/xnee_range.c
	* src/xnee_expr.c
	Corrected fault when parsing files

	* src/xnee_error.c
	Corrected fault when parsing files

	* src/print.c
	Commented away things in recorded file that may break replay

	* include/libxnee/xnee_resource.h
	Corrected fault when parsing files

	* src/parse.c
	* src/cnee_demo.c
	Corrected fault when parsing files

	* include/parse.h
	Added code for syntax check

2006-11-09    <hesa@gnu.org>

	* doc/xnee_exampl.texi: 
	--out changed to --out-file

2006-11-08    <hesa@gnu.org>

	* doc/gen_faq.sh: 
	New file to generate FAQ from Manual
	
	* cnee/src/cnee_printer.c: 
	Changed Xnee to cnee in cnee man/info pages
	
	* doc/xnee_start.texi: 
	Replaced "--loops" with "--events-to-record"

	* libxnee/src/xnee_resource.c: 
	--time is now a general option (not a record)
	minor text adjustment
	
        * cnee/src/main.c
	* cnee/src/parse.c
	Better handling of failed parsing
	
2006-10-07   Henrik Sandkklef  <hesa@gnu.org>

	* doc/xnee_faq.texi
	Minor change (better English)
